fix file paths